--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.3",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,6 +16,7 @@
     "history": "^5.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.5",
